--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Norican&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,4 +7,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 62.5%;
+}
+
+.page {
+  box-sizing: border-box;
+  height: 100vh;
+  padding: 15px;
+  text-align: center;
+}
+
+.footer {
+  background: #292d3e;
+  bottom: 0;
+  color: white;
+  font-size: 1.8rem;
+  left: 0;
+  padding: 10px 0;
+  position: absolute;
+  width: 100%;
+}
+
+h1 {
+  font-size: 2.4rem;
+  margin: 0;
+}
+
+p {
+  font-size: 1rem;
+  margin: 0;
 }
