Use cloudimage to serve background images

--- a/src/BooksPage/BooksPage.css
+++ b/src/BooksPage/BooksPage.css
@@ -1,5 +1,5 @@
 .BooksPage {
-  background: url('./background.jpg');
+  background: url('https://afmsmgripo.cloudimg.io/v7/operation-bol-d-air.fr/static/media/background.aa4a4bda.jpg?w=2500');
   background-position: center center;
   background-size: cover;
   color: white;
