--- a/src/SubscribePage/SubscribePage.css
+++ b/src/SubscribePage/SubscribePage.css
@@ -1,5 +1,5 @@
 .SubscribePage {
-  background: url('/home-page-background.jpg?w=2500');
+  background: url('https://afmsmgripo.cloudimg.io/v7/operation-bol-d-air.fr/home-page-background.jpg?w=2500');
   background-position: center center;
   background-size: cover;
   position: relative;
