--- a/src/BooksPage/Book.css
+++ b/src/BooksPage/Book.css
@@ -4,7 +4,10 @@
 }
 
 .Book .book-cover {
+  align-items: flex-end;
+  display: flex;
   height: 50vh;
+  justify-content: center;
   margin: 15px 0;
 }
 
