--- a/src/BooksPage/Book.css
+++ b/src/BooksPage/Book.css
@@ -1,6 +1,5 @@
-
 .Book .date {
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .Book .book-cover {
@@ -19,14 +18,14 @@
 .Book .button {
   display: block;
   font-size: 1rem;
-  margin: .5rem auto;
+  margin: 0.5rem auto;
   max-width: 250px;
   padding: 10px;
   text-decoration: none;
 }
 
 .Book .button.green {
-  background: #3A6;
+  background: #3a6;
 }
 
 .Book .button.blue {
@@ -35,4 +34,5 @@
 
 .Book .button.red {
   background: #a50000;
+  font-size: 0.9rem;
 }
