--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Norican&display=swap');
 
 body {
-  background: #292d3e;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,6 +15,13 @@ body {
   height: 100vh;
   padding: 15px 0;
   text-align: center;
+}
+
+.page.with-background-image {
+  background: #292d3e;
+  background-position: center center;
+  background-size: cover;
+  color: white;
 }
 
 .footer {
