--- a/src/BooksPage/Book.css
+++ b/src/BooksPage/Book.css
@@ -5,9 +5,9 @@
 .Book .book-cover {
   align-items: flex-end;
   display: flex;
-  height: 50vh;
   justify-content: center;
   margin: 15px 0;
+  width: 100px;
 }
 
 .Book .book-cover-image {
