--- a/src/BooksPage/Book.css
+++ b/src/BooksPage/Book.css
@@ -6,7 +6,7 @@
   align-items: flex-end;
   display: flex;
   justify-content: center;
-  margin: 15px 0;
+  margin: 15px auto;
   width: 100px;
 }
 
