Re-add download button for available books

--- a/src/BooksPage/Book.css
+++ b/src/BooksPage/Book.css
@@ -17,7 +17,7 @@
 
 .Book .button {
   display: block;
-  font-size: 1rem;
+  font-size: .9rem;
   margin: 0.5rem auto;
   max-width: 250px;
   padding: 10px;
