--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body {
 
 .page {
   box-sizing: border-box;
-  height: 100vh;
+  margin: auto;
+  max-width: 1024px;
   padding: 15px 0;
   text-align: center;
 }
